fix: buggy dark mode

--- a/style/03-generics/_prefers-color-scheme.scss
+++ b/style/03-generics/_prefers-color-scheme.scss
@@ -1,11 +1,5 @@
 @media (prefers-color-scheme: dark) {
   // @see https://polypane.app/blog/the-complete-guide-to-css-media-queries/#implementing-a-dark-mode
-  :root {
-    background: #111;
-    color-scheme: dark;
-    filter: invert(1) hue-rotate(180deg);
-  }
-
   // @see https://codepen.io/5t3ph/pen/VwModqR
   img,
   video {
